Fix Connecting section not showing; prefer wss://
styles.css
---
* Replace section:last-child with section:last-of-type (twice)

client/.../websocket.js
---
* Check if location.host startsWith "localhost": if not use wss://
* (Cosmetic) remove unused destructured sender_id

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -4,12 +4,12 @@ section {
 }
 
 section:target,
-section:last-child {
+section:last-of-type {
   display: block;
 }
 
 
-section:target ~ section:last-child {
+section:target ~ section:last-of-type {
   display: none;
 }
 
